tests/paczka1/fuzzy1/99357146.err
Error in line 1: S464 A978 75,1
Error in line 3: kjLiq S572 10,6
Error in line 4: gB6gdB1 S56 17,9
Error in line 9: S464 A978 44,8
Error in line 11: hlZihT A978 53,4
Error in line 15: cV6hZTh S56 89,3
Error in line 13: kjLiq A978 2716,9
Error in line 32: hlZihT A978 2,8
Error in line 33: cV6hZTh A978 85,1
Error in line 39: nfCacpwoGUt S464 46,0
